# market-intelligence-mvp

./: .env.example  .env.gcp.example  .gitignore  CLAUDE.md  PHASE_2_COMPLETE.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  cloudbuild.yaml  docker-compose.yml  problems.md  pyproject.toml  ralph-production-pipeline.md  requirements-airflow.txt  requirements-api.txt  setup.sh
.github/workflows/: deploy.yml
airflow/dags/: data_ingestion.py  feature_engineering.py  model_training.py
benchmarks/: pandas_vs_fireducks.py
docker/: Dockerfile.airflow  Dockerfile.api  Dockerfile.mlflow  entrypoint-airflow.sh
docs/: benchmarks.md  contributing.md  mlops.md  models.md  pipelines.md  roadmap.md  troubleshooting.md
docs/progress/: PHASE_3_PROGRESS.md
scripts/: deploy-gcp.sh  gcp-scheduler.sh  train_all_models.py
src/api/: main.py  models.py  service.py
src/api/static/: style.css
src/api/templates/: index.html
src/data/: ingestion.py  processing.py  sample_data_generator.py  validation.py
src/features/: __init__.py  regime_detection.py  selection.py  sentiment.py  technical_indicators.py  timeseries.py
src/models/ensemble/: __init__.py  stacking.py
src/models/supervised/: classification.py  lightgbm_model.py  random_forest_model.py  regression.py  xgboost_model.py
tests/integration/: test_feature_pipeline.py
tests/unit/: test_core_modules.py
